fix spacing for navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
   --dark-grey: #2b2b2b;
 }
 
+.navigation-list__item {
+  padding-right: 20px; /* adjust this value as necessary */
+}
 
 
 a {
